src/index.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Roboto+Condensed:wght@400;700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
@tailwind base;
@tailwind components;
@tailwind utilities;

body{
    background-color: #f1f1f1;
    background-color: #ffffff;
    max-width: 100%;
}

  /*--------------------------------------------------------------
  # Global Page Titles & Breadcrumbs
  --------------------------------------------------------------*/
  .page-title {
    padding: 80px 0 80px 0;
    text-align: center;
    position: relative;
    color: white;
    color: #144835;
  }

  
  .page-title h1 {
    font-weight: 700;
    margin-bottom: 10px;
  }
  
  .page-title .breadcrumbs ol {
    display: flex;
    flex-wrap: wrap;
    list-style: none;
    justify-content: center;
    padding: 0;
    margin: 0;
    font-size: 16px;
    font-weight: 400;
  }
  
  .page-title .breadcrumbs ol li+li {
    padding-left: 10px;
  }
  
  .page-title .breadcrumbs ol li+li::before {
    content: "/";
    display: inline-block;
    padding-right: 10px;
  }
  

/* --------------------------------------------------------------
# Featured Services Section
--------------------------------------------------------------*/
  .featured-services {
    --cyan-color: #0dcaf0;
    --orange-color: #fd7e14;
    --teal-color: #20c997;
    --red-color: #df1529;
  }
  .featured-services .service-item.item-orange .icon {
    background-color: color-mix(in srgb, #f52509 10%, white 95%);
  }
  
  .featured-services .service-item.item-orange .icon i {
    color:#f52509;
  }
  
  .featured-services .service-item.item-orange:hover .icon {
    background-color: #f525092f;
  }
 
  .featured-services .service-item.item-orange:hover .icon i {
    color: #f52509;
  }
   .service-item .icon svg {
    width: 50px;
    height: 50px;
   }

/*--------------------------------------------------------------
# Why Us Section
--------------------------------------------------------------*/

.why-us-section{
    display: flex;
    flex-wrap: wrap;
  }

.why-us .card {
    background-color: var(--surface-color);
    color: var(--default-color);
    border: 1px solid color-mix(in srgb, var(--default-color), transparent 90%);
    padding: 40px;
    margin: -1px;
    border-radius: 0;
    width: calc(100% / 3);
    min-width: 50%;
    border: 1px solid #2A966F;
  }
  
  .why-us .card span {
    display: block;
    font-size: 24px;
    font-weight: 400;
    color: var(--accent-color);
  }
  
  .why-us .card h4 {
    font-size: 24px;
    font-weight: 600;
    padding: 0;
    margin: 20px 0;
  }
  
  .why-us .card p {
    color: color-mix(in srgb, var(--default-color), transparent 40%);
    font-size: 15px;
    margin: 0;
    padding: 0;
  }
  
/*--------------------------------------------------------------
# Call To Action Section
--------------------------------------------------------------*/
.call-to-action {
  padding: 130px 0;
  position: relative;
  clip-path: inset(1);
}

.call-to-action .container {
  position: relative;
  z-index: 3;
}

.call-to-action .cta-btn {
  font-weight: 500;
  font-size: 16px;
  letter-spacing: 1px;
  display: inline-block;
  padding: 12px 40px;
  border-radius: 50px;
  transition: 0.5s;
  margin: 10px;
  border: 2px solid black;
}

#call-to-action::after {
  border: none;
  content: '';
  position: absolute;
  top:-2px;
  left: 0;
  width: 100%;
  height: 125px; /* Adjust the height as needed */
  background: #ffffff; /* Adjust the background color as needed */
  clip-path: polygon(0% 0%, 0% 82.5%, 1.69492% 84.3293%, 3.38983% 86.1385%, 5.08475% 87.9078%, 6.77966% 89.6179%, 8.47458% 91.25%, 10.1695% 92.7862%, 11.8644% 94.2098%, 13.5593% 95.505%, 15.2542% 96.6578%, 16.9492% 97.6555%, 18.6441% 98.487%, 20.339% 99.1435%, 22.0339% 99.6176%, 23.7288% 99.9041%, 25.4237% 100%, 27.1186% 99.9041%, 28.8136% 99.6176%, 30.5085% 99.1435%, 32.2034% 98.487%, 33.8983% 97.6555%, 35.5932% 96.6578%, 37.2881% 95.505%, 38.9831% 94.2098%, 40.678% 92.7862%, 42.3729% 91.25%, 44.0678% 89.6179%, 45.7627% 87.9078%, 47.4576% 86.1385%, 49.1525% 84.3293%, 50.8475% 82.5%, 52.5424% 80.6708%, 54.2373% 78.8616%, 55.9322% 77.0922%, 57.6271% 75.3821%, 59.322% 73.75%, 61.017% 72.2138%, 62.7119% 70.7902%, 64.4068% 69.495%, 66.1017% 68.3422%, 67.7966% 67.3446%, 69.4915% 66.513%, 71.1864% 65.8565%, 72.8814% 65.3824%, 74.5763% 65.0959%, 76.2712% 65%, 77.9661% 65.0959%, 79.661% 65.3824%, 81.3559% 65.8565%, 83.0509% 66.513%, 84.7458% 67.3446%, 86.4407% 68.3422%, 88.1356% 69.495%, 89.8305% 70.7902%, 91.5254% 72.2138%, 93.2203% 73.75%, 94.9153% 75.3821%, 96.6102% 77.0922%, 98.3051% 78.8616%, 100% 80.6708%, 100% 0%); shape-outside: polygon(0% 0%, 0% 82.5%, 1.69492% 84.3293%, 3.38983% 86.1385%, 5.08475% 87.9078%, 6.77966% 89.6179%, 8.47458% 91.25%, 10.1695% 92.7862%, 11.8644% 94.2098%, 13.5593% 95.505%, 15.2542% 96.6578%, 16.9492% 97.6555%, 18.6441% 98.487%, 20.339% 99.1435%, 22.0339% 99.6176%, 23.7288% 99.9041%, 25.4237% 100%, 27.1186% 99.9041%, 28.8136% 99.6176%, 30.5085% 99.1435%, 32.2034% 98.487%, 33.8983% 97.6555%, 35.5932% 96.6578%, 37.2881% 95.505%, 38.9831% 94.2098%, 40.678% 92.7862%, 42.3729% 91.25%, 44.0678% 89.6179%, 45.7627% 87.9078%, 47.4576% 86.1385%, 49.1525% 84.3293%, 50.8475% 82.5%, 52.5424% 80.6708%, 54.2373% 78.8616%, 55.9322% 77.0922%, 57.6271% 75.3821%, 59.322% 73.75%, 61.017% 72.2138%, 62.7119% 70.7902%, 64.4068% 69.495%, 66.1017% 68.3422%, 67.7966% 67.3446%, 69.4915% 66.513%, 71.1864% 65.8565%, 72.8814% 65.3824%, 74.5763% 65.0959%, 76.2712% 65%, 77.9661% 65.0959%, 79.661% 65.3824%, 81.3559% 65.8565%, 83.0509% 66.513%, 84.7458% 67.3446%, 86.4407% 68.3422%, 88.1356% 69.495%, 89.8305% 70.7902%, 91.5254% 72.2138%, 93.2203% 73.75%, 94.9153% 75.3821%, 96.6102% 77.0922%, 98.3051% 78.8616%, 100% 80.6708%, 100% 0%);
}

/*--------------------------------------------------------------
# Team Section
--------------------------------------------------------------*/
.team .member {
  position: relative;
}

.team .member .member-img {
  overflow: hidden;
  position: relative;
}

@media (max-width: 1024px) {
  .team .member .member-img {
    margin: 0 60px;
  }
}

.team .member .member-img img {
  position: relative;
  z-index: 1;
}

.team .member .member-img .social {
  position: absolute;
  inset: 0;
  background-color: rgba(0, 0, 0, 0.6);
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 2;
  padding-bottom: 20px;
  transition: 0.3s;
  visibility: hidden;
  opacity: 0;
}

.team .member .member-img .social a {
  transition: 0.3s;
  color: var(--contrast-color);
  font-size: 20px;
  margin: 0 8px;
}

.team .member .member-img .social a:hover {
  color: var(--accent-color);
}

.team .member .member-info {
  margin-top: 30px;
}

.team .member .member-info h4 {
  font-weight: 700;
  margin-bottom: 6px;
  font-size: 18px;
}

.team .member .member-info span {
  font-style: italic;
  display: block;
  font-size: 15px;
  color: color-mix(in srgb, var(--default-color), transparent 40%);
  margin-bottom: 10px;
}

.team .member .member-info p {
  margin-bottom: 0;
  font-size: 14px;
}

.team .member:hover .member-img .social {
  padding-bottom: 0;
  visibility: visible;
  opacity: 1;
}


.spotlight-item {
  transition: transform 0.3s ease, opacity 0.3s ease;
  margin: 0 10px; /* Space between items */
  text-align: center;
  display: flex;  
  background-color: white;
  align-items: center;
  justify-content: center;
  padding: 10px;
  border-radius: 10px;
  gap: 50px;
}


.spotlight-item:hover {
  transform: scale(1.05);
  opacity: 0.9;
}


.center {
  transform: scale(1.2); /* Scale up the center item and its width */
  opacity: 1;
  z-index: 10;

}

@media screen and (max-width: 900px) {
  .side {
    display: none;
  }
  
}
.spotlight-item:not(.center) {
  opacity: 0.5; /* Dim side items */
}

.carousel-button {
  margin: 10px;
  padding: 10px 15px;
  cursor: pointer;
  border: none;
  align-self: center;
  border-radius: 5px;
  z-index: 100;
  top: 50%;
  transform: translate(0, -50%);
}

.carousel-button:hover {
  background-color: #f1f1f1;
  transition: 0.3s;
  z-index: 100;
  border-radius: 50%;
  cursor: pointer;
  border: none;
  align-self: center;
  border-radius: 50%;

  z-index: 100;
}

.prev {
  position: absolute;
  left: -10%;

}

.next {
  position: absolute;
  right: -10%;
}


.card-container {
  perspective: 1000px;
  height: 250px;
}

.card {
  width: 100%;
  height: 100%;
  position: relative;
  transform-style: preserve-3d;
  transition: transform 0.6s;
}

.card-container:hover .card {
  transform: rotateY(180deg);
}

.card-front,
.card-back {
  position: absolute;
  width: 100%;
  height: 100% ;
  backface-visibility: hidden;
}

.card-back {
  transform: rotateY(180deg);
}

